restart modifications + paired read verification bug fixes